docs/am/4.11/guides/auth-protocols/oauth-2.0/extension-grants.md
# Extension Grants

## Overview

OAuth 2.0 defines standard grant types for token endpoints, such as _password_, _authorization\_code_ and _refresh\_token_.

Extension grants are a way to add support for non-standard token issuance scenarios like token exchange, delegation or custom credentials.

AM allows you to extend available grants for an application by adding custom extension grants.

## Token Exchange

AM supports RFC 8707 token exchange via the `urn:ietf:params:oauth:grant-type:token-exchange` grant type. This grant type enables server-to-server authentication patterns, including Model Context Protocol (MCP) server integration, where an existing token (access, refresh, ID, or JWT) can be exchanged for a new access token.

### Prerequisites

- Domain with token exchange enabled (`tokenExchangeSettings.enabled = true`)
- Allowed subject token types configured at the domain level
- Protected resource or application configured with the token exchange grant type
- Authentication method compatible with token exchange (`client_secret_basic`, `client_secret_post`, or `client_secret_jwt`)

### Supported Subject Token Types

- `urn:ietf:params:oauth:token-type:access_token`
- `urn:ietf:params:oauth:token-type:refresh_token`
- `urn:ietf:params:oauth:token-type:id_token`
- `urn:ietf:params:oauth:token-type:jwt`

### Token Exchange Request

To exchange a token, send a POST request to the token endpoint with the following parameters:

| Parameter | Required | Description | Example |
|:----------|:---------|:------------|:--------|
| `grant_type` | Yes | Must be `urn:ietf:params:oauth:grant-type:token-exchange` | `urn:ietf:params:oauth:grant-type:token-exchange` |
| `subject_token` | Yes | The token to exchange | `eyJhbGciOiJSUzI1NiIs...` |
| `subject_token_type` | Yes | Type of the subject token (must be in domain's allowed list) | `urn:ietf:params:oauth:token-type:access_token` |
| `requested_token_type` | No | Must be `urn:ietf:params:oauth:token-type:access_token` or omitted | `urn:ietf:params:oauth:token-type:access_token` |

Include client credentials via HTTP Basic authentication or POST body parameters according to the configured authentication method.

### Token Exchange Response

```json
{
  "access_token": "eyJhbGciOiJSUzI1NiIs...",
  "issued_token_type": "urn:ietf:params:oauth:token-type:access_token",
  "token_type": "bearer",
  "expires_in": 3600
}
```

The exchanged token includes the following claims:

- `client_id`: Requesting client's ID (not the original subject token's client)
- `aud`: Requesting client's ID
- `gis`: Preserved from subject token (subject identity)
- `exp`: Minimum of subject token expiration and requesting client's token lifetime

### Restrictions

- Token exchange responses never include `refresh_token` or `id_token`, even if the subject token has `openid` scope
- Subject token type must be in the domain's `allowedSubjectTokenTypes` list
- Token exchange requires domain-level enablement

## JWT Bearer

AM supports the [RFC 7523](https://tools.ietf.org/html/rfc7523) specification, which defines the use of a JSON Web Token (JWT) Bearer Token as a means for requesting an OAuth 2.0 access token and for client authentication. The JWT Bearer Token flow supports the RSA SHA256 algorithm, which uses a public key as the signing secret.

JWT bearer tokens can be used for secure communication between devices and services (and applications) running in the cloud which are protected using OAuth2. Devices is a broad term used for devices, clients, machines and third-party applications that may or may not be web-based.

### Generate the key pair

```sh
// Generate the private key
$ openssl genpkey -algorithm RSA -out rsa_private.pem -pkeyopt rsa_keygen_bits:2048

// Generate the public key
$ openssl rsa -in rsa_private.pem -pubout -out rsa_public.pem
```

### Create a new JWT bearer extension grant

1. Log in to AM Console.
2. Click **Settings**, then in the **OAUTH 2.0** section, click **Extension Grants**.
3.  Click the plus icon ![plus icon](https://docs.gravitee.io/images/icons/plus-icon.png).

    <figure><img src="../../../.gitbook/assets/Screenshot 2025-09-10 at 17.53.23.png" alt=""><figcaption><p>Create Extension grant</p></figcaption></figure>
4.  Select **Extension Grant JWT Bearer** and click **Next**.

    <figure><img src="../../../.gitbook/assets/Screenshot 2025-09-10 at 17.55.31.png" alt=""><figcaption><p>Add JWT Bearer</p></figcaption></figure>
5. Complete the grant flow configuration and click **Create**.

The plugin provides two types of public key resolver: JWKS\_URL and GIVEN\_KEY. The public key resolver validates the signature of the incoming token in `assertion`.

To validate assertion against remote JWKS, the resolver parameter must be a specified URL:

<figure><img src="../../../.gitbook/assets/Screenshot 2025-09-10 at 18.02.57.png" alt=""><figcaption><p>JWKS as resolve parameter</p></figcaption></figure>

To validate the token signature against the signature key, it must be in the following format:

`SSH public key (ssh-(rsa|dsa) ([A-Za-z0-9/+]+=`**`) (.`**`))`

or start with:

`-----BEGIN CERTIFICATE-----` .

<div><figure><img src="../../../.gitbook/assets/Screenshot 2025-09-10 at 18.09.55.png" alt=""><figcaption></figcaption></figure> <figure><img src="../../../.gitbook/assets/Screenshot 2025-09-10 at 18.09.44.png" alt=""><figcaption></figcaption></figure></div>

If you want to copy claims from the incoming token to the final access token, you can use the **Claims mapper**. The **Claims mapper** will copy the incoming token claims as additional information about the user profile under the `claims` entry. This will allow you to add these claims using token customization.

### Associate the extension grant with an application

1. In AM Console, click **Applications**.
2. Select your application and in the **Settings** tab, click **OAuth 2.0 / OIDC**.
3.  In the **Grant flows** section, select your extension grant.

    <figure><img src="../../../.gitbook/assets/Screenshot 2025-09-10 at 18.11.23.png" alt=""><figcaption></figcaption></figure>
4.  Click **SAVE**.

    You are now ready to use AM Gateway to exchange a token generated by a third party for an AM token.

### Token exchange

This example assumes the token is in the following format:

{% code overflow="wrap" %}
```sh
eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWUsImlhdCI6MTUxNjIzOTAyMn0.eC6XIImo6WMhm2oQXksgYN6iRMWmE3aQwPYabM3iUICojEhtPZn9Ifk7KZMPFUa78Ijl42YWEBG0Z_hr7yuQy9YHcT1tEkkG2OGKBr5x_BwiWVwZvYaQA-dP08wriXOqEx-v-xB-z6qHOS8lpo_d6LvYrTXkslCaX1A3HZMT2-MQjmJvVUDQM6wID_5L-XiJuSEk36fx-f7TuCWfzPXgrRgCG5sg2vv74sn-HGUVUMZlTwBxvj_itxYuu-M5L5l7YSkNITPaPgK4TD4qwOCOfYKKpKEe4RV0GDrV_Sf7_Ps1qextkpGtRztr90fsuooQKaJSVaE_d7BDEpkLe7Ss7w
```
{% endcode %}

With the following content:

```sh
// header
{
  "alg": "RS256",
  "typ": "JWT"
}

// data
{
  "sub": "1234567890",
  "name": "John Doe",
  "admin": true,
  "iat": 1516239022
}
```

To exchange the token, you need to call AM Gateway with the following parameter definitions:

* `grant_type=urn:ietf:params:oauth:grant-type:jwt-bearer`
* `assertion=#jwt_token`

Here is an example using `curl`:

{% code overflow="wrap" %}
```sh
curl -X POST http://localhost:8092/fapi/oauth/token -H 'Authorization: basic base64(client_id:client_secret)' -d "grant_type=urn:ietf:params:oauth:grant-type:jwt-bearer&assertion=eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWUsImlhdCI6MTUxNjIzOTAyMn0.eC6XIImo6WMhm2oQXksgYN6iRMWmE3aQwPYabM3iUICojEhtPZn9Ifk7KZMPFUa78Ijl42YWEBG0Z_hr7yuQy9YHcT1tEkkG2OGKBr5x_BwiWVwZvYaQA-dP08wriXOqEx-v-xB-z6qHOS8lpo_d6LvYrTXkslCaX1A3HZMT2-MQjmJvVUDQM6wID_5L-XiJuSEk36fx-f7TuCWfzPXgrRgCG5sg2vv74sn-HGUVUMZlTwBxvj_itxYuu-M5L5l7YSkNITPaPgK4TD4qwOCOfYKKpKEe4RV0GDrV_Sf7_Ps1qextkpGtRztr90fsuooQKaJSVaE_d7BDEpkLe7Ss7w"
```
{% endcode %}

{% code overflow="wrap" %}
```sh
{
"access_token" : "eyJraWQiOiJkZWZhdWx0LWdyYXZpdGVlLUFNLWtleSIsImFsZyI6IkhTMjU2In0.eyJzdWIiOiIxMjM0NTY3ODkwIiwiYXVkIjoiMTFkYWQ4MGUtYTk0MC00YWFlLTlhZDgtMGVhOTQwMGFhZTYwIiwiZG9tYWluIjoiZmFwaSIsImlzcyI6Imh0dHA6XC9cL2xvY2FsaG9zdDo4MDkyXC9mYXBpXC9vaWRjIiwiZXhwIjoxNTk2NDk4NTA5LCJpYXQiOjE1OTY0OTEzMDksImp0aSI6IlI5V25oR2lPRGppTmc2aGNvNHRhb2NIcXVmZmx2cWYwQ2dlampQcnZvcnMifQ.SYls19XDhFG3UuPNFMWOA-F1Dtc_1_v4FtqFU0Evnss",
"token_type" : "bearer",
"expires_in" : 7199
}
```
{% endcode %}

As we can see, we now have an AM-managed access token:

```sh
// header
{
  "kid": "default-gravitee-AM-key",
  "alg": "HS256"
}

// data
{
  "sub": "1234567890",
  "aud": "11dad80e-a940-4aae-9ad8-0ea9400aae60",
  "domain": "fapi",
  "iss": "http://localhost:8092/fapi/oidc",
  "exp": 1596498509,
  "iat": 1596491309,
  "jti": "R9WnhGiODjiNg6hco4taocHqufflvqf0CgejjPrvors"
}

```
